# fast-api-ddd

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/auth/: config.py
src/auth/interface/api/: main.py
