[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = "Implementing domain driven design with FastAPI, postgres and rabbitmq"
authors = ["Rakib Hasan Amiya <rhasan.amiya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
google-cloud-pubsub = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
